MT backup